<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="#A1A1A1">

    <TextView
        android:id="@+id/question"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:text="@string/questionText"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <Button
        android:id="@+id/no"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#DCDCDC"
        android:text="@string/no"
        android:textColor="#5E5E5E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <Button
        android:id="@+id/yes"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#DCDCDC"
        android:text="@string/yes"
        android:textColor="#5E5E5E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

</androidx.constraintlayout.widget.ConstraintLayout>