<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A1A1A1"
    tools:context=".activity.AddQuestionActivity">

    <TextView
        android:id="@+id/nameOfCategory"
        android:layout_width="105dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#D5D5D5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fillQuestion"
        android:layout_width="333dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle_background"
        android:gravity="center"
        android:hint="@string/questionHint"
        android:textColor="#D5D5D5"
        android:textColorHint="#8C8C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfCategory" />

    <ImageView
        android:id="@+id/smallLogo"
        android:layout_width="98dp"
        android:layout_height="17dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/small_logo" />

    <Button
        android:id="@+id/addCategory"
        android:layout_width="343dp"
        android:layout_height="61dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/grey"
        android:contentDescription="@string/addQuestion"
        android:text="@string/addQuestion"
        android:textColor="#D5D5D5"
        app:layout_constraintBottom_toTopOf="@+id/smallLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/exit"
        android:layout_width="54dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>